config/pod56/eccd1/ccrc/outbound-policy/auto-sni-pcf.yaml
## The configuration enable SNI on non-443 port(PCF 9091) in TLS outbound traffic(NRF notification)
# The value of service shall be same with value of global.istio.egress.endpoints.eric_nrf_sbi_traffic.host in values.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ccrc-outbound-traffic-auto-sni-pcf
spec:
  workloadSelector:
    labels:
      egress: traffic-producer
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        portNumber: 9091
        service: '*.3gppnetwork.org'
      context: SIDECAR_OUTBOUND
    patch:
      operation: MERGE
      value:
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            upstream_http_protocol_options:
              auto_sni: true
            explicit_http_config:
              http2_protocol_options:
                override_stream_error_on_invalid_http_message: false
