config/pod56/eccd1/ccrc/outbound-policy/tcp-options-for-tls-pcf.yaml
## The configuration is used for non-443 port(PCF 9091) in TLS outbound traffic(NRF notification)
## The value of service shall be same with value of global.istio.egress.endpoints.eric_nrf_sbi_traffic.host in values.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ccrc-outbound-traffic-tcp-options-for-tls-pcf
spec:
  workloadSelector:
    labels:
      egress: traffic-producer
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        portNumber: 9091
        service: '*.3gppnetwork.org'
      context: SIDECAR_OUTBOUND
    patch:
      operation: MERGE
      value:
        cleanup_interval: 4h
        upstream_bind_config:
          source_address:
            address: "0.0.0.0"
            port_value: 0
          socket_options:
          - int_value: 3000
            level: 6
            name: 18
  - applyTo: CLUSTER
    match:
      cluster:
        portNumber: 9091
        service: '*.3gppnetwork.org'
      context: SIDECAR_OUTBOUND
    patch:
      operation: MERGE
      value:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_params:
                tls_minimum_protocol_version: TLSv1_2
                tls_maximum_protocol_version: TLSv1_3
                cipher_suites:
                - ECDHE-ECDSA-AES128-GCM-SHA256
                - ECDHE-RSA-AES128-GCM-SHA256
                - ECDHE-ECDSA-AES256-GCM-SHA384
                - ECDHE-RSA-AES256-GCM-SHA384
